--- a/argo/app.yaml
+++ b/argo/app.yaml
@@ -14,6 +14,7 @@ spec:
     path: config/overlays/stage
     repoURL: https://github.com/wpernath/quarkus-simple-config.git
     targetRevision: HEAD
+    sourceType: Kustomize
   syncPolicy:
     automated:
       prune: true
