--- a/config/overlays/dev/kustomization.yaml
+++ b/config/overlays/dev/kustomization.yaml
@@ -26,5 +26,5 @@ resources:
 - ../../base
 images:
 - digest: sha256:4a21262731cd86419de9a04f5f7821980b87392613d52b1987bf479d17b178cb
-  name: quay.io/wpernath/quarkus-simple
+  name: quay.io/wpernath/simple-quarkus:latest
   newName: quay.io/wpernath/quarkus-simple-wow
