--- a/config/base/post-sync-job.yaml
+++ b/config/base/post-sync-job.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   generateName: my-finalizer-
-  name: my-finalizer-
+  #name: my-finalizer
   annotations:
     argocd.argoproj.io/hook: PreSync
 spec:
